--- a/client/src/index.css
+++ b/client/src/index.css
@@ -483,6 +483,7 @@ body {
 ***********************************/
 
 .home-container {
+  width: 100%;
   padding-top: 20px;
   height: inherit;
   text-align: center;
